tests/parser-test-files/bad-files/define.2.error
error: Invalid variable
  --> test:4:8
   |
 4 |  (define "x" 1.5)
   |          ^^^ expected identifier
