tests/parser-test-files/bad-files/define.2.coal
;; BAD: Invalid definition name
(package test-package)

(define "x" 1.5)
